--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -6,7 +6,7 @@
 </head>
 <body style="padding-top: 60px">
   <div class="container-fluid">
-    <h2> Upcomming Races </h2>
+    <h2> Upcoming Races </h2>
     <table class="table table-hover table-bordered sortable">
       <thead>
       <tr>
@@ -18,7 +18,7 @@
       </tr>
       </thead>
       <tbody>
-      <% @upcomming_races_to_show.each do |race| %>
+      <% @upcoming_races_to_show.each do |race| %>
         <tr>
           <td><%= link_to race.date, race_path(race) %></td>
           <td><%= StartItem.where(race_id: race.id).count %></td>
