--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
 <head>
   <title>Order</title>
   <%= render "shared/navbar" %>
 </head>
-<body style="padding-top: 60px">
 <div class="container-fluid">
   <h2> Order </h2>
   <p>
@@ -25,5 +22,4 @@
   </p>
   <%= link_to 'Back to shop', shop_path %></a>
   </div>
-</body>
-</html>
+</div>
