--- a/app/views/racers/new.html.erb
+++ b/app/views/racers/new.html.erb
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
 <head>
   <title>New Racer</title>
   <%= render "shared/navbar" %>
 </head>
-<body style="padding-top: 60px">
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-3 col-md-offset-1">
@@ -48,5 +45,4 @@
       <%= link_to 'Add new racer', new_racer_path(), :class => "btn btn-default" %>
     </div>
   </div>
-</body>
-</html>
+</div>
