--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= render "shared/navbar" %>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 </head>
-<body>
+<body style="padding-top: 60px">
 
 <%= render "shared/flash_messages" %>
 
