--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
 <head>
   <title>Users</title>
   <%= render "shared/navbar" %>
 </head>
-<body style="padding-top: 60px">
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-3 col-md-offset-1">
@@ -56,5 +53,4 @@
     </div>
   </div>
   <% end %>
-</body>
-</html>
+</div>
