--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
 <head>
   <title>Races</title>
   <%= render "shared/navbar" %>
 </head>
-<body style="padding-top: 60px">
 <div class="container-fluid">
   <h2> User </h2>
   <p>
@@ -29,5 +26,4 @@
   </p>
   <%= link_to 'Back to user', users_path %></a>
   </div>
-</body>
-</html>
+</div>
