--- a/app/views/pages/shop.html.erb
+++ b/app/views/pages/shop.html.erb
@@ -25,7 +25,7 @@
       </div>
       <% end %>
     <div class="text-center">
-      <br>  
+      <br>
       <div class="row">
         <div class="col-md-3">
           <b>The Divis</b>
@@ -39,7 +39,10 @@
           <%= link_to 'Select', new_order_path(:item => "The Divis", :size => "One Size Fits All", :user_id => current_user.id ), :class => "btn btn-default" %>
           <% end %>
           <% if current_user && current_user.admin? %>
-          <h4> Order Count: <%= Order.where(:item => "The Divis").count %> </h4>
+          <h4>
+            Order Count: <%= Order.where(:item => "The Divis").count %>
+            (<%= ((Order.where(:item => "The Divis").count / 10.0) * 100.0).round(2)%>%)
+          </h4>
           <% end %>
         </div>
         <div class="col-md-3">
@@ -54,7 +57,10 @@
           <%= link_to 'Select', new_order_path(:item => "The Lombard Gate", :size => "One Size Fits All", :user_id => current_user.id ), :class => "btn btn-default" %>
           <% end %>
           <% if current_user && current_user.admin? %>
-          <h4> Order Count: <%= Order.where(:item => "The Lombard Gate").count %> </h4>
+          <h4>
+            Order Count: <%= Order.where(:item => "The Lombard Gate").count %>
+            (<%= ((Order.where(:item => "The Lombard Gate").count / 12.0) * 100.0).round(2)%>%)
+          </h4>
           <% end %>
         </div>
         <div class="col-md-3">
@@ -69,7 +75,10 @@
           <%= link_to 'Select', new_order_path(:item => "The Filbert St. Hop", :size => "One Size Fits All", :user_id => current_user.id ), :class => "btn btn-default" %>
           <% end %>
           <% if current_user && current_user.admin? %>
-          <h4> Order Count: <%= Order.where(:item => "The Filbert St. Hop").count %> </h4>
+          <h4>
+            Order Count: <%= Order.where(:item => "The Filbert St. Hop").count %>
+            (<%= ((Order.where(:item => "The Filbert St. Hop").count / 12.0) * 100.0).round(2)%>%)
+          </h4>
           <% end %>
         </div>
         <div class="col-md-3">
@@ -84,7 +93,10 @@
           <%= link_to 'Select', new_order_path(:item => "The Buchanan", :size => "One Size Fits All", :user_id => current_user.id ), :class => "btn btn-default" %>
           <% end %>
           <% if current_user && current_user.admin? %>
-          <h4> Order Count: <%= Order.where(:item => "The Buchanan").count %> </h4>
+          <h4>
+            Order Count: <%= Order.where(:item => "The Buchanan").count %>
+            (<%= ((Order.where(:item => "The Buchanan").count / 10.0) * 100.0).round(2)%>%)
+          </h4>
           <% end %>
         </div>
       </div>
