--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -29,6 +29,12 @@
           </div>
       </div>
       <div class="form-group">
+        <%= i.label :group, "Group:", class: "col-md-1 control-label" %>
+          <div class="col-md-3">
+            <%= i.text_field :group, class: "form-control" %>
+          </div>
+      </div>
+      <div class="form-group">
         <%= i.label :racer_id, "Racer ID:", class: "col-md-1 control-label" %>
           <div class="col-md-3">
             <%= i.text_field :racer_id, class: "form-control", :value => params[:racer_id] %>
