- Fixing some name mismatches. - Fixing StartItem/Edit.

--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <title>Users</title>
+  <title>Race Registration</title>
   <%= render "shared/navbar" %>
 </head>
 <div class="container-fluid">
