--- a/app/views/start_items/edit.html.erb
+++ b/app/views/start_items/edit.html.erb
@@ -1,7 +1,55 @@
-<h1>HERE</h1>
 <head>
-  <title>Races</title>
+  <title>Edit Registration</title>
   <%= render "shared/navbar" %>
 </head>
-  
-<%= link_to 'Back', results_path %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-3 col-md-offset-1">
+      <h2> Edit Registration </h2>
+    </div>
+  </div>
+  <%= form_for @start_item, :html => {:class => "form-horizontal "} do |i| %>
+    <% if @start_item.errors.any? %>
+      <div id="error_explanation">
+        <h2>
+          <%= pluralize(@start_item.errors.count, "error") %> prohibited
+          this start_item from being saved:
+        </h2>
+        <ul>
+          <% @start_item.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+      <div class="form-group">
+        <%= i.label :bib, "Bib:", class: "col-md-1 control-label" %>
+          <div class="col-md-3">
+            <%= i.text_field :bib, class: "form-control" %>
+          </div>
+      </div>
+      <div class="form-group">
+        <%= i.label :group, "Group:", class: "col-md-1 control-label" %>
+          <div class="col-md-3">
+            <%= i.text_field :group, class: "form-control" %>
+          </div>
+      </div>
+      <div class="form-group">
+        <%= i.label :racer_id, "Racer ID:", class: "col-md-1 control-label" %>
+          <div class="col-md-3">
+            <%= i.text_field :racer_id, class: "form-control" %>
+          </div>
+      </div>
+      <div class="form-group">
+        <%= i.label :race_id, "Race ID:", class: "col-md-1 control-label" %>
+          <div class="col-md-3">
+            <%= i.text_field :race_id, class: "form-control" %>
+          </div>
+      </div>
+      <div class="form-group">
+        <div class="col-md-1 col-md-offset-1">
+        <%=button_tag "Submit", class: "btn btn-default"%>
+        </div>
+      </div>
+  <% end %>
+</div>
