--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -31,7 +31,7 @@
       <div class="form-group">
         <%= i.label :group, "Group:", class: "col-md-1 control-label" %>
           <div class="col-md-3">
-            <%= i.text_field :group, class: "form-control" %>
+            <%= i.select :group, options_for_select(['ALL','Canine','Loop-Beer']), {}, class: "form-control" %>
           </div>
       </div>
       <div class="form-group">
