--- a/app/assets/stylesheets/races.css
+++ b/app/assets/stylesheets/races.css
@@ -15,3 +15,9 @@
     color: black;
     padding: 10 px;
 }
+
+.panel-title a {
+    display: block;
+    padding: 10px 15px;
+    margin: -10px -15px;
+}
