--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
   <script src="//fast.eager.io/8zFOq25yxx.js"></script>
   <%= render "shared/navbar" %>
+  <%= render 'layouts/google_analytics' %>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 </head>
 <body style="padding-top: 60px">
