--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -3,7 +3,7 @@
     <%= render "shared/navbar_races" %>
 </head>
 <div class="container-fluid">
-  <h2> Upcoming Races </h2>
+  <h2> Upcoming Races <%= link_to '+', new_race_path() %> </h2>
   <table class="table table-hover table-bordered sortable">
     <thead>
     <tr>
