--- a/app/views/races/new.html.erb
+++ b/app/views/races/new.html.erb
@@ -1,28 +1,37 @@
-<h1>New Race</h1>
-
-<%= form_for @race do |r| %>
- 
-  <% if @race.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@race.errors.count, "error") %> prohibited
-        this article from being saved:
-      </h2>
-      <ul>
-        <% @race.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
+<head>
+  <title>New Race</title>
+  <%= render "shared/navbar" %>
+</head>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-3 col-md-offset-1">
+      <h2> New Race </h2>
+    </div>
+  </div>
+  <%= form_for @race, :html => {:class => "form-horizontal "} do |r| %>
+    <% if @race.errors.any? %>
+      <div id="error_explanation">
+        <h2>
+          <%= pluralize(@result.errors.count, "error") %> prohibited
+          this race from being saved:
+        </h2>
+        <ul>
+          <% @race.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+    <div class="form-group">
+      <%= r.label :date, "Date:", class: "col-md-1 control-label" %>
+        <div class="col-md-3">
+          <%= r.date_field :date, class: "form-control" %>
+        </div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-1 col-md-offset-1">
+      <%=button_tag "Submit", class: "btn btn-success"%>
+      </div>
     </div>
   <% end %>
- 
-  <p>
-    <%= r.label :date %><br>
-    <%= r.text_field :date %>
-  </p>
- 
-  <p>
-    <%= r.submit %>
-  </p>
- 
-<% end %>
+</div>
