Chaning 'Start Items' -> 'Entrants'

--- a/app/views/shared/_start_list.html.erb
+++ b/app/views/shared/_start_list.html.erb
@@ -4,7 +4,7 @@
       <a data-toggle="collapse" 
       data-target="#start_items_table"
       href="#start_items_table">
-          Start Items (<%= @start_items_length %>)
+          Entrants (<%= @start_items_length %>)
       </a>
     </h4>
   </div>
