--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -8,6 +8,25 @@
       <h2> Registration </h2>
     </div>
   </div>
+  <h3>Likely Racers</h3>
+  <div class="likely-table">
+    <table class="table table-hover table-bordered sortable">
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Bib</th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @likely_racers.each do |racer| %>
+        <tr>
+          <td><%= racer.first_name %> <%= racer.last_name %></td>
+          <td><%= racer.bib %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
   <%= form_for @start_item, :html => {:class => "form-horizontal "} do |i| %>
     <% if @start_item.errors.any? %>
       <div id="error_explanation">
@@ -37,7 +56,7 @@
       <div class="form-group">
         <%= i.label :racer_id, "Racer:", class: "col-md-1 control-label" %>
           <div class="col-md-3">
-            <%= i.autocomplete_field :racer_id, autocomplete_racer_racers_path, class: "form-control", :value => params[:racer] %>
+            <%= i.autocomplete_field :racer_id, autocomplete_racer_racers_path, class: "form-control" %>
           </div>
       </div>
       <div class="form-group">
