--- a/app/views/start_items/new.html.erb
+++ b/app/views/start_items/new.html.erb
@@ -6,26 +6,27 @@
   <div class="row">
     <div class="col-md-3 col-md-offset-1">
       <h2> Registration </h2>
+      <h3>Likely Racers</h3>
+      <div class="likely-table" id="likely-table">
+        <table class="table table-hover table-bordered sortable">
+          <thead>
+          <tr>
+            <th>Name</th>
+            <th>Bib</th>
+          </tr>
+          </thead>
+          <tbody>
+          <% @likely_racers.each do |racer| %>
+            <tr>
+              <td><%= racer.first_name %> <%= racer.last_name %></td>
+              <td><%= racer.fav_bib %></td>
+            </tr>
+          <% end %>
+          </tbody>
+        </table>
+      </div>
+
     </div>
-  </div>
-  <h3>Likely Racers</h3>
-  <div class="likely-table">
-    <table class="table table-hover table-bordered sortable">
-      <thead>
-      <tr>
-        <th>Name</th>
-        <th>Bib</th>
-      </tr>
-      </thead>
-      <tbody>
-      <% @likely_racers.each do |racer| %>
-        <tr>
-          <td><%= racer.first_name %> <%= racer.last_name %></td>
-          <td><%= racer.bib %></td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
   </div>
   <%= form_for @start_item, :html => {:class => "form-horizontal "} do |i| %>
     <% if @start_item.errors.any? %>
