--- a/app/views/racers/show.html.erb
+++ b/app/views/racers/show.html.erb
@@ -43,58 +43,92 @@
   </div>
   <div class="row">
     <div class="col-md-3">
-      <%= bar_chart Result.where(racer_id: @racer.id).group(:rank).count, xtitle: "Finish Place", ytitle: "Count", title: "Finish Place Distribution", width: "300px", height: "250px", colors: ["#52a351"]%>
+      <div class="panel panel-default">
+        <div class="panel-heading">Finish Places</div>
+        <div class="panel-body">
+          <%= bar_chart Result.where(racer_id: @racer.id).group(:rank).count, xtitle: "Finish Place", ytitle: "Count", title: "Finish Place Distribution", width: "300px", height: "250px", colors: ["#52a351"]%>
+        </div>
+      </div>
     </div>
     <div class="col-md-3">
-      <%= bar_chart Result.where(racer_id: @racer.id).group(:bib).count, xtitle: "Bib #{}", ytitle: "Count", title: "Finish Place Distribution", width: "300px", height: "250px", colors: ["#ff8080"]%>
+      <div class="panel panel-default">
+        <div class="panel-heading">Bib Numbers</div>
+        <div class="panel-body">
+          <%= bar_chart Result.where(racer_id: @racer.id).group(:bib).count, xtitle: "Bib #{}", ytitle: "Count", title: "Finish Place Distribution", width: "300px", height: "250px", colors: ["#ff8080"]%>
+        </div>
+      </div>
     </div>
   </div>
-<div class="container-fluid">
   <div class="row">
-    <div class="col-large-1">
-      <%= line_chart @results_to_show, colors: ["#4689ce"], xtitle: "Date", ytitle: "Finish Time (seconds)" %>
+    <div class="col-md-9">
+      <div class="panel panel-default">
+        <div class="panel-heading">Historical Finish Times</div>
+        <div class="panel-body">
+          <div class="racer-chart">
+            <svg width="960" height="500" id="racer_chart"></svg>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-3">
-    <h4>Races</h4>
-    <br>  
-    <table class="table table-hover table-bordered">
-    <thead>
-    <tr>
-      <th>Date</th>
-      <th>Time</th>
-    </tr>
-    </thead>
-    <tbody>
-    <% @racer.results.where("group_name != ?", "Loop-Beer").includes(:race).order("races.date DESC").each do |result| %>
-      <tr>
-        <td><%= link_to Race.find(result.race_id).date, race_path(Race.find(result.race_id)) %></td>
-        <td><%= result.time %></td>
-      </tr>
-    <% end %>
-    </tbody>
-    </table>
+      <div class="panel panel-default">
+        <div class="panel-heading">Loop-Beer Runs</div>
+        <div class="panel-body">
+          <h4>Races</h4>
+          <br>
+          <table class="table table-hover table-bordered">
+          <thead>
+          <tr>
+            <th>Date</th>
+            <th>Time</th>
+          </tr>
+          </thead>
+          <tbody>
+          <% @racer.results.where("group_name != ?", "Loop-Beer").includes(:race).order("races.date DESC").each do |result| %>
+            <tr>
+              <td><%= link_to Race.find(result.race_id).date, race_path(Race.find(result.race_id)) %></td>
+              <td><%= result.time %></td>
+            </tr>
+          <% end %>
+          </tbody>
+          </table>
+        </div>
+      </div>
     </div>
-  <div class="col-md-2">
-    <h4>Loop-Beer Runs</h4>
-    <br>
-      <table class="table table-hover table-bordered">
-      <thead>
-      <tr>
-        <th>Date</th>
-        <th>Time</th>
-      </tr>
-      </thead>
-      <tbody>
-      <% @racer.results.where("group_name = ?", "Loop-Beer").includes(:race).order("races.date DESC").each do |result| %>
-        <tr>
-          <td><%= link_to Race.find(result.race_id).date, race_path(Race.find(result.race_id)) %></td>
-          <td><%= result.time %></td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
+    <div class="col-md-2">
+      <div class="panel panel-default">
+        <div class="panel-heading">Loop-Beer Runs</div>
+        <div class="panel-body">
+          <br>
+            <table class="table table-hover table-bordered">
+            <thead>
+            <tr>
+              <th>Date</th>
+              <th>Time</th>
+            </tr>
+            </thead>
+            <tbody>
+            <% @racer.results.where("group_name = ?", "Loop-Beer").includes(:race).order("races.date DESC").each do |result| %>
+              <tr>
+                <td><%= link_to Race.find(result.race_id).date, race_path(Race.find(result.race_id)) %></td>
+                <td><%= result.time %></td>
+              </tr>
+            <% end %>
+            </tbody>
+          </table>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
     </div>
 </div>
+<script>
+// Load the racer data to display racer-time-chart.js.
+var racerData = <%= @results_for_graph %>;
+$( document ).ready(function() {
+    displayRacerChart(racerData);
+});
+</script>
